# std2bids

./: README.md  pyproject.toml
src/std2bids/: utils.py
src/std2bids/flows/: ukb.py
src/std2bids/models/: abstract.py  ukb.py
tests/: __init__.py  datasets.py  test_ukb.py
